configure secure Seccomp profiles to restrict potentially dangerous syscalls

--- a/ansible/roles/teams-bridge/templates/msteams-deployment.yml
+++ b/ansible/roles/teams-bridge/templates/msteams-deployment.yml
@@ -30,6 +30,8 @@ spec:
           name: mx-puppet-teams
           securityContext:
             allowPrivilegeEscalation: false
+            seccompProfile:
+              type: RuntimeDefault
           ports:
             - containerPort: 8432
           volumeMounts:
