--- a/ansible/roles/external-dns/templates/external-dns.yml
+++ b/ansible/roles/external-dns/templates/external-dns.yml
@@ -60,6 +60,8 @@ spec:
           image: "registry.k8s.io/external-dns/external-dns:{{ external_dns.version }}"
           securityContext:
             allowPrivilegeEscalation: false
+            seccompProfile:
+              type: RuntimeDefault
           args:
             - --source=ingress
             - "--domain-filter={{ dns_zone }}"
