--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,13 +19,13 @@ jobs:
           terraform_version: 1.6.*
 
       - name: Terraform Init
-        run: terraform init -backend=false
+        run: cd terraform && terraform init -backend=false
 
       - name: Terraform Validate
-        run: terraform validate
+        run: cd terraform && terraform validate
 
       - name: Terraform Validate
-        run: ">&2 terraform fmt --check"
+        run: "cd terraform && >&2 terraform fmt --check"
 
       - uses: terraform-linters/setup-tflint@v3
         name: Setup TFLint
@@ -33,7 +33,7 @@ jobs:
           tflint_version: v0.48.0
 
       - name: Run TFLint
-        run: tflint -f compact
+        run: cd terraform && tflint -f compact
 
   lint-yaml:
     name: "Yaml linter"
