fix(security): communication over https

--- a/ansible/roles/discovery-rooms/tasks/join-discovery-room.yml
+++ b/ansible/roles/discovery-rooms/tasks/join-discovery-room.yml
@@ -1,7 +1,7 @@
 ---
 - name: get all users in home server (can be up to 100k)
   ansible.builtin.uri:
-    url: "http://{{ matrix.server_name }}/_synapse/admin/v2/users?from=0&limit=1000000&guests=false"
+    url: "https://{{ matrix.server_name }}/_synapse/admin/v2/users?from=0&limit=1000000&guests=false"
     method: GET
     status_code: 200
     body_format: json
@@ -12,7 +12,7 @@
 
 - name: get all users in discovery room
   ansible.builtin.uri:
-    url: "http://{{ matrix.server_name }}/_synapse/admin/v1/rooms/{{ discovery_room_id }}/members"
+    url: "https://{{ matrix.server_name }}/_synapse/admin/v1/rooms/{{ discovery_room_id }}/members"
     method: GET
     status_code: 200
     body_format: json
@@ -23,7 +23,7 @@
 
 - name: add in discovery room all users not already present, one by one
   ansible.builtin.uri:
-    url: "http://{{ matrix.server_name }}/_synapse/admin/v1/join/{{ discovery_room_id }}"
+    url: "https://{{ matrix.server_name }}/_synapse/admin/v1/join/{{ discovery_room_id }}"
     method: POST
     body: "{{ lookup('template', 'user.json') }}"
     status_code: 200, 201
@@ -38,7 +38,7 @@
 
 - name: Verify the state of the discovery_room
   uri:
-    url: "http://{{ matrix.server_name }}/_synapse/admin/v1/rooms/{{ discovery_room_id }}"
+    url: "https://{{ matrix.server_name }}/_synapse/admin/v1/rooms/{{ discovery_room_id }}"
     method: GET
     status_code: 200
     body_format: json
@@ -48,7 +48,7 @@
 
 - name: Verify the users in the discovery_room
   uri:
-    url: "http://{{ matrix.server_name }}/_synapse/admin/v1/rooms/{{ discovery_room_id }}/members"
+    url: "https://{{ matrix.server_name }}/_synapse/admin/v1/rooms/{{ discovery_room_id }}/members"
     method: GET
     status_code: 200
     body_format: json
