--- a/ansible/roles/discovery-rooms/tasks/discovery-room.yml
+++ b/ansible/roles/discovery-rooms/tasks/discovery-room.yml
@@ -1,7 +1,7 @@
 ---
 - name: Get the room id of the room with the alias discoveryroom
   uri:
-    url: "http://{{ matrix.server_name }}/_matrix/client/v3/directory/room/%23discoveryroom%3A{{matrix.server_name}}?roomAlias=%23discoveryroom%3A{{matrix.server_name}}"
+    url: "https://{{ matrix.server_name }}/_matrix/client/v3/directory/room/%23discoveryroom%3A{{matrix.server_name}}?roomAlias=%23discoveryroom%3A{{matrix.server_name}}"
     method: GET
     status_code: 200, 404  # allow 404 when no alias exists
     body_format: json
@@ -19,7 +19,7 @@
 
 - name: Create discovery room unencrypted v9 with alias if not already existing
   uri:
-    url: "http://{{ matrix.server_name }}/_matrix/client/v3/createRoom"
+    url: "https://{{ matrix.server_name }}/_matrix/client/v3/createRoom"
     method: POST
     body: "{{ lookup('template', 'discovery_room.json') }}"
     status_code: 200, 201
