--- a/ansible/roles/teams-bridge/templates/msteams-deployment.yml
+++ b/ansible/roles/teams-bridge/templates/msteams-deployment.yml
@@ -15,6 +15,7 @@ spec:
       labels:
         app: msteams-bridge
     spec:
+      automountServiceAccountToken: false
       volumes:
         - name: data-vol
           persistentVolumeClaim:
