--- a/ansible/configuration.yml
+++ b/ansible/configuration.yml
@@ -14,6 +14,7 @@
     - first-admin
     - psc-button
     - discovery-rooms
+    - stunner
     - synapse-extra-config
     - element-web
     - monitoring
