feat: add monitoring to destroy job

--- a/ansible/destroy-k8s.yml
+++ b/ansible/destroy-k8s.yml
@@ -5,6 +5,7 @@
   vars:
     absent_or_present: absent
   roles:
+    - monitoring
     - element-web
     - synapse
     - teams-bridge
@@ -35,4 +36,5 @@
         name: "{{ item }}"
       loop:
         - element-web
+        - monitoring
   ignore_errors: True
