--- a/ansible/roles/stunner/templates/stunner-configuration.yml
+++ b/ansible/roles/stunner/templates/stunner-configuration.yml
@@ -22,6 +22,8 @@ spec:
   authType: plaintext
   userName: "user-1"
   password: "pass-1"
+  loadBalancerServiceAnnotations:
+    loadbalancer.ovhcloud.com/class: "octavia"
 
 ---
 apiVersion: gateway.networking.k8s.io/v1
