--- a/ansible/roles/postgresql-init/templates/postgres-secret.yml
+++ b/ansible/roles/postgresql-init/templates/postgres-secret.yml
@@ -7,3 +7,12 @@ type: Opaque
 data:
   synapse-db-password: "{{ matrix.db_password | b64encode}}"
   avnadmin-db-password: "{{ matrix.avnadmin_password | b64encode}}"
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: keycloak-avnadmin-db-secret
+  namespace: keycloak
+type: Opaque
+data:
+  password: "{{ keycloak.db_avnadmin_password | b64encode}}"
