--- a/ansible/configuration.yml
+++ b/ansible/configuration.yml
@@ -8,7 +8,9 @@
     - ingress-controller
     - cert-manager
     - external-dns
+    - keycloak-operator
     - postgresql-init
+    - keycloak
     - teams-bridge
     - stunner
     - synapse
