--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,8 +94,8 @@ env:
   MONITORING_GRAFANA_PASSWORD: ${{ secrets.MONITORING_GRAFANA_PASSWORD }}
   MONITORING_PROMETHEUS_VOLUME_SIZE: ${{ vars.MONITORING_PROMETHEUS_VOLUME_SIZE }}
   # variables used by stun/turn server
-  STUNNER_ENABLED: {{ vars.STUNNER_ENABLED }}
-  STUNNER_SHARED_SECRET: {{ secrets.STUNNER_SHARED_SECRET }}
+  STUNNER_ENABLED: ${{ vars.STUNNER_ENABLED }}
+  STUNNER_SHARED_SECRET: ${{ secrets.STUNNER_SHARED_SECRET }}
 
 jobs:
   set_environment:
