Feat/277 activate stun/turn server (#310)
stun/turn server configuration with stunner in order to facilitate the audio/video call on synapse

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,6 +93,9 @@ env:
   MONITORING_SUBDOMAIN_NAME: ${{ vars.MONITORING_SUBDOMAIN_NAME }}
   MONITORING_GRAFANA_PASSWORD: ${{ secrets.MONITORING_GRAFANA_PASSWORD }}
   MONITORING_PROMETHEUS_VOLUME_SIZE: ${{ vars.MONITORING_PROMETHEUS_VOLUME_SIZE }}
+  # variables used by stun/turn server
+  STUNNER_ENABLED: ${{ vars.STUNNER_ENABLED }}
+  STUNNER_SHARED_SECRET: ${{ secrets.STUNNER_SHARED_SECRET }}
 
 jobs:
   set_environment:
