refactor(settings): separate email and display name

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,7 +65,8 @@ env:
   SMTP_HOST: ${{ vars.SMTP_HOST }}
   SMTP_USER: ${{ vars.SMTP_USER }}
   SMTP_PASS: ${{ secrets.SMTP_PASS }}
-  SMTP_NOTIFY_FROM: ${{ vars.SMTP_NOTIFY_FROM }}
+  SMTP_FROM: ${{ vars.SMTP_FROM }}
+  SMTP_DISPLAY_NAME: ${{ vars.SMTP_DISPLAY_NAME }}
   FIRST_EIMIS_USERNAME: ${{ secrets.FIRST_EIMIS_USERNAME }}
   FIRST_EIMIS_PASSWORD: ${{ secrets.FIRST_EIMIS_PASSWORD }}
   DUMMY_USERNAME: ${{ secrets.DUMMY_USERNAME }}
