--- a/ansible/roles/keycloak-operator/tasks/main.yml
+++ b/ansible/roles/keycloak-operator/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - name: Create namespace dedicated to keycloak
   kubernetes.core.k8s:
+    state: "{{ absent_or_present }}"
     name: keycloak
     api_version: v1
     kind: Namespace
-    state: present
 
 - name: Create temporary folder
   ansible.builtin.tempfile:
@@ -14,6 +14,7 @@
   changed_when: False
 
 - name: Download the CRDs for keycloak-operator
+  when: absent_or_present == "present"
   ansible.builtin.get_url:
     url: "https://raw.githubusercontent.com/keycloak/keycloak-k8s-resources/{{ keycloak.operator_version }}/kubernetes/keycloaks.k8s.keycloak.org-v1.yml"
     dest: "{{ kc_operator_tmp_folder.path }}/keycloaks.k8s.keycloak.org-v1.yml"
@@ -22,11 +23,12 @@
 
 - name: Apply the CRDs for realm import keycloak operator
   kubernetes.core.k8s:
-    state: present
+    state: "{{ absent_or_present }}"
     namespace: keycloak
     src: "{{ kc_operator_tmp_folder.path }}/keycloaks.k8s.keycloak.org-v1.yml"
 
 - name: Download the CRDs for keycloak-operator
+  when: absent_or_present == "present"
   ansible.builtin.get_url:
     url: "https://raw.githubusercontent.com/keycloak/keycloak-k8s-resources/{{ keycloak.operator_version }}/kubernetes/keycloakrealmimports.k8s.keycloak.org-v1.yml"
     dest: "{{ kc_operator_tmp_folder.path }}/keycloakrealmimports.k8s.keycloak.org-v1.yml"
@@ -35,11 +37,12 @@
 
 - name: Apply the CRDs for keycloak-operator
   kubernetes.core.k8s:
-    state: present
+    state: "{{ absent_or_present }}"
     namespace: keycloak
     src: "{{ kc_operator_tmp_folder.path }}/keycloakrealmimports.k8s.keycloak.org-v1.yml"
 
 - name: Download the Keycloak Operator deployment
+  when: absent_or_present == "present"
   ansible.builtin.get_url:
     url: "https://raw.githubusercontent.com/keycloak/keycloak-k8s-resources/{{ keycloak.operator_version }}/kubernetes/kubernetes.yml"
     dest: "{{ kc_operator_tmp_folder.path }}/kubernetes.yml"
@@ -48,6 +51,6 @@
 
 - name: Apply the Keycloak Operator deployment
   kubernetes.core.k8s:
-    state: present
+    state: "{{ absent_or_present }}"
     namespace: keycloak
     src: "{{ kc_operator_tmp_folder.path }}/kubernetes.yml"
