feat: add a picto for keycloak auth button

--- a/ansible/configuration.yml
+++ b/ansible/configuration.yml
@@ -15,7 +15,7 @@
     - stunner
     - synapse
     - first-admin
-    - psc-button
+    - auth-buttons
     - discovery-rooms
     - synapse-extra-config
     - element-web
