keycloak domain name variabilized

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,6 +98,7 @@ env:
   STUNNER_ENABLED: ${{ vars.STUNNER_ENABLED }}
   STUNNER_SHARED_SECRET: ${{ secrets.STUNNER_SHARED_SECRET }}
   # variables used by matrix keycloak
+  KEYCLOAK_SUBDOMAIN_NAME: ${{ vars.KEYCLOAK_SUBDOMAIN_NAME }}
   KEYCLOAK_CLIENT_ID: ${{ vars.KEYCLOAK_CLIENT_ID }}
   KEYCLOAK_CLIENT_SECRET: ${{ secrets.KEYCLOAK_CLIENT_SECRET }}
 
