keycloak eimis-realm authenticator corrected

--- a/ansible/roles/keycloak/templates/keycloak-realm.yml
+++ b/ansible/roles/keycloak/templates/keycloak-realm.yml
@@ -169,7 +169,7 @@ spec:
             priority: 10
             requirement: REQUIRED
             userSetupAllowed: false
-          - authenticator: demo-email-code-form
+          - authenticator: email-authenticator
             authenticatorFlow: false
             autheticatorFlow: false
             priority: 21
