fix(keycloak): manage logout when logged with keycloak

--- a/ansible/roles/element-web/tasks/main.yml
+++ b/ansible/roles/element-web/tasks/main.yml
@@ -16,6 +16,8 @@
         add_header X-Content-Type-Options nosniff;
         add_header X-XSS-Protection "1; mode=block";
         add_header Content-Security-Policy "frame-ancestors 'self'";
+      config:
+        logout_redirect_url: "https://{{ keycloak.server_name }}/realms/eimis-realm/protocol/openid-connect/logout?post_logout_redirect_uri=https://{{ element.server_name }}&client_id={{ keycloak.client_id }}"
       ingress:
         enabled: true
         className: nginx
