--- a/ansible/roles/synapse/tasks/main.yml
+++ b/ansible/roles/synapse/tasks/main.yml
@@ -8,6 +8,12 @@
     name: ananace-charts
     repo_url: "https://ananace.gitlab.io/charts"
 
+- name: Create temporary folder
+  ansible.builtin.tempfile:
+    state: directory
+    suffix: temp
+  register: module_tmp_folder
+  
 - name: Is there a new s3 media repo module version?
   shell: |
     current_version=$(kubectl get configmap s3-media-repo-module -o "jsonpath={.data['module_version']}")
@@ -16,29 +22,47 @@
     else
       echo "yes"
     fi
-  register: new_version
-
-- name: Create temporary folder
-  ansible.builtin.tempfile:
-    state: directory
-    suffix: temp
-  register: s3_module_tmp_folder
-  when: new_version.stdout == "yes"
+  register: new_s3_version
 
 - name: Download s3 media repo module
   ansible.builtin.get_url:
     url: https://raw.githubusercontent.com/matrix-org/synapse-s3-storage-provider/{{ matrix.s3_media_repo.module_version }}/s3_storage_provider.py
-    dest: "{{s3_module_tmp_folder.path}}/s3_storage_provider.py"
-  when: new_version.stdout == "yes"
+    dest: "{{module_tmp_folder.path}}/s3_storage_provider.py"
+  when: new_s3_version.stdout == "yes"
 
 - name: Delete config map for s3 media repo module
   shell: "kubectl delete configmap s3-media-repo-module"
   ignore_errors: True
-  when: new_version.stdout == "yes"
+  when: new_s3_version.stdout == "yes"
 
 - name: Create config map for s3 media repo module
-  shell: "kubectl create configmap s3-media-repo-module --from-file '{{ s3_module_tmp_folder.path }}/' --from-literal module_version={{ matrix.s3_media_repo.module_version }}"
-  when: new_version.stdout == "yes"
+  shell: "kubectl create configmap s3-media-repo-module --from-file '{{ module_tmp_folder.path }}/s3_storage_provider.py' --from-literal module_version={{ matrix.s3_media_repo.module_version }}"
+  when: new_s3_version.stdout == "yes"
+
+- name: Is there a new psc mapping provider module version?
+  shell: |
+    current_version=$(kubectl get configmap psc-mapping-provider-module -o "jsonpath={.data['module_version']}")
+    if [ "$current_version" = "{{ matrix.psc_mapping_provider.module_version }}" ]; then
+      echo "no"
+    else
+      echo "yes"
+    fi
+  register: new_psc_mapping_provider_version
+
+- name: Download psc mapping provider module
+  ansible.builtin.get_url:
+    url: https://raw.githubusercontent.com/eimis-ans/eimis-prosante-connect-module/main/psc_mapping_provider/__init__.py
+    dest: "{{module_tmp_folder.path}}/psc-mapping-provider.py"
+  when: new_psc_mapping_provider_version.stdout == "yes"
+
+- name: Delete config map for psc mapping provider
+  shell: "kubectl delete configmap psc-mapping-provider-module"
+  ignore_errors: True
+  when: new_psc_mapping_provider_version.stdout == "yes"
+
+- name: Create config map for psc mapping provider
+  shell: "kubectl create configmap psc-mapping-provider-module --from-file '{{ module_tmp_folder.path }}/psc-mapping-provider.py' --from-literal module_version={{ matrix.s3_media_repo.module_version }}"
+  when: new_psc_mapping_provider_version.stdout == "yes"
 
 - name: matrix-synapse helm chart
   kubernetes.core.helm:
