chore: make yaml linter happy (again)

--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -12,3 +12,6 @@ rules:
     forbid: false
     min-spaces-inside: 0
     max-spaces-inside: 1
+ignore:
+  - ansible/ansible_collections/
+  - local/
