fix(deploy): add missing vars in workflows

--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -68,6 +68,8 @@ env:
   DUMMY_PASSWORD: ${{ secrets.DUMMY_PASSWORD }}
   FEDERATION_SERVERS_LIST: ${{ vars.FEDERATION_SERVERS_LIST }}
   SYNAPSE_AUTO_REGISTRATION: ${{ vars.SYNAPSE_AUTO_REGISTRATION }}
+  SYNAPSE_ENABLE_PASSWORD_LOGIN: ${{ vars.SYNAPSE_ENABLE_PASSWORD_LOGIN }}
+  SYNAPSE_IMAGE_TAG: ${{ vars.SYNAPSE_IMAGE_TAG }}
   SYNAPSE_MEDIA_UPLOAD_MAX_SIZE_MB: ${{ vars.SYNAPSE_MEDIA_UPLOAD_MAX_SIZE_MB }}
   SYNAPSE_WELCOME_ROOM: ${{ vars.SYNAPSE_WELCOME_ROOM }}
   # variables used to connect to Pro Santé Connect.
@@ -88,6 +90,7 @@ env:
   STUNNER_ENABLED: ${{ vars.STUNNER_ENABLED }}
   STUNNER_SHARED_SECRET: ${{ secrets.STUNNER_SHARED_SECRET }}
   # variables used by matrix keycloak
+  KEYCLOAK_IMAGE_TAG: ${{ vars.KEYCLOAK_IMAGE_TAG }}
   KEYCLOAK_SUBDOMAIN_NAME: ${{ vars.KEYCLOAK_SUBDOMAIN_NAME }}
   KEYCLOAK_CLIENT_ID: ${{ vars.KEYCLOAK_CLIENT_ID }}
   KEYCLOAK_CLIENT_SECRET: ${{ secrets.KEYCLOAK_CLIENT_SECRET }}
